--- a/package.json
+++ b/package.json
@@ -1,24 +1,74 @@
 {
-  "name": "my-app",
+  "name": "project23-nextjs-theme3",
   "version": "0.1.0",
+  "dependencies": {
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "5.15.10",
+    "@mui/material": "5.15.7",
+    "@mui/system": "5.15.8",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "@types/aos": "3.0.7",
+    "@types/node": "20.5.1",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.19",
+    "body-parser": "1.20.2",
+    "chart.js": "^4.4.9",
+    "concurrently": "8.2.2",
+    "cors": "2.8.5",
+    "cross-env": "7.0.3",
+    "css-loader": "^7.1.2",
+    "express": "4.19.2",
+    "file-loader": "^6.2.0",
+    "filter-data-advanced": "1.0.8",
+    "fs": "0.0.1-security",
+    "gh-pages": "^6.1.1",
+    "next": "14.2.6",
+    "next-remote-watch": "2.0.0",
+    "nextjs": "^0.0.3",
+    "nodemon": "3.1.4",
+    "npm": "10.8.2",
+    "patch-package": "^8.0.0",
+    "postcss": "^8.4.38",
+    "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.3.1",
+    "react-filter-control": "2.1.0",
+    "react-filter-editor": "2.0.2",
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.15.3",
+    "request": "2.88.2",
+    "style-loader": "^4.0.0",
+    "styled-components": "^6.1.13",
+    "swiper": "^11.1.10",
+    "tailwindcss": "^3.4.3",
+    "typescript": "4.9.5",
+    "url-loader": "^4.1.1",
+    "web-vitals": "2.1.4"
+  },
+  "homepage": "https://github.com/aarostami/project23-LoraHost-panel",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "////dev": "cross-env NODE_OPTIONS='--inspect' NODE_NO_WARNINGS=1 next-remote-watch",
+    "///dev": "next dev",
+    "//dev": "nodemon ./src/server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "deploy": "gh-pages -d build",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "start": "next start"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.1"
+    "loader": "^2.1.1",
+    "sass": "^1.87.0",
+    "sass-loader": "^16.0.5",
+    "webpack": "^5.99.7",
+    "webpack-cli": "^6.0.1"
   }
 }
