--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "url-loader": "^4.1.1",
     "web-vitals": "2.1.4"
   },
-  "homepage": "https://github.com/aarostami/project23-LoraHost-panel",
+  "homepage": "https://github.com/aarostami/pro23",
   "private": true,
   "scripts": {
     "////dev": "cross-env NODE_OPTIONS='--inspect' NODE_NO_WARNINGS=1 next-remote-watch",
