--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project23-nextjs-theme3",
   "version": "0.1.0",
-  "type": "module",
+  "//type": "module",
   "dependencies": {
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
